--- a/notebooks/julian_o.ipynb
+++ b/notebooks/julian_o.ipynb
@@ -51,6 +51,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
    "source": [
     "# This cell computes the markov clusters for various inflation.\n",
     "network_name = \"icp55-cc-900-inv\"\n",
@@ -62,19 +69,16 @@
     "    cluster_filename = lib.files.make_clusters_filename(network_name, cluster_name)\n",
     "    cluster_filepath = lib.files.make_filepath_to_clusters(cluster_filename)\n",
     "    lib.cluster.run_mcl_and_write_to_file(network, cluster_filepath, inflation)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# This cell calculates various validation metrics various clusterings\n",
@@ -89,17 +93,16 @@
     "    inflation = round(i, 1)  # Round to 1 d.p.\n",
     "    cluster_name = f\"mcl-{inflation}\"\n",
     "    lib.dataframes.cluster_dataframe(network_name, cluster_name)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# This cell computes a dataframe of node properties given various clusterings.\n",
@@ -111,17 +114,16 @@
     "                              True, True, True, True, True, True)\n",
     "lib.dataframes.node_dataframe('icp55-cc-900-inv', 'louvain', True, True, True, True, True, True, True, True, True, True,\n",
     "                              True, True, True, True, True, True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# This cell computes the louvain clustering\n",
@@ -141,17 +143,16 @@
     "    lib.files.make_filepath_to_clusters(\n",
     "        lib.files.make_clusters_filename('icp55-cc-900-inv', 'louvain')),\n",
     "    clusters)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# This cell plots the loglog size distribution of clusters and saves to a file.\n",
@@ -190,13 +191,7 @@
     "clusters = lib.cluster.read_clusters(network_name, clusters_name)\n",
     "plot_loglog(size_dist(clusters), f\"mcl-{inflation} size distribution\", \"Size\", \"Percentage\",\n",
     "            lib.files.make_filepath_to_graphs(f'mcl-{inflation}-loglog-size-distribution.png'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
@@ -204,9 +199,9 @@
    "hash": "6466067c764c2694f1c40eca2655e6eecb7144d68186792bd40a1ffe2312ef24"
   },
   "kernelspec": {
-   "name": "pycharm-8a1eea31",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "display_name": "PyCharm (math3888)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -218,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
